--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "index-app",
+  "name": "lecture-next14.1.4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "express": "^4.21.0",
-    "next": "14.2.8",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.6",
+    "gsap": "^3.12.5",
+    "next": "14.1.4",
     "react": "^18",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18",
-    "three": "^0.168.0"
+    "react-feather": "^2.0.10",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
+    "sonner": "^1.7.0",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "vite": "^5.4.3"
-  },
-  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
